Fixed z-index align

--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -3,6 +3,29 @@
   height: 400px;
   background-color: #008cff;
   position: relative;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+  padding: 40px 0;
+}
+
+.Footer h1 {
+  font-size: 42px;
+  font-weight: bold;
+}
+
+.Footer p {
+  font-size: 20px;
+}
+
+.svg-footer {
+  margin-top: auto;
+}
+
+.svg-footer svg {
+  margin-top: auto;
+  width: 40px;
+  height: 40px;
 }
 
 .Footer .wave {
@@ -16,28 +39,28 @@
 }
 
 .Footer .wave#wave1 {
-  z-index: 1000;
+  z-index: 1;
   opacity: 1;
   bottom: 0;
   animation: animateWave 4s linear infinite;
 }
 
 .Footer .wave#wave2 {
-  z-index: 999;
+  z-index: 2;
   opacity: 0.5;
   bottom: 10px;
   animation: animateWaveReverse 4s linear infinite;
 }
 
 .Footer .wave#wave3 {
-  z-index: 998;
+  z-index: 3;
   opacity: 0.2;
   bottom: 15px;
   animation: animateWave 3s linear infinite;
 }
 
 .Footer .wave#wave4 {
-  z-index: 997;
+  z-index: 4;
   opacity: 0.7;
   bottom: 20px;
   animation: animateWaveReverse 3s linear infinite;
